docs(bench): [COR-322]: record three-profile benchmark snapshot
Official host run on 6ecae55; VECTORIZED tables join STANDARD and
HIGH_PERFORMANCE in the README.